[project]
name = "qwen-inference-lab"
version = "0.1.0"
description = "Exploration log: optimizing Qwen3.5-27B inference on Apple Silicon"
license = "Apache-2.0"
authors = [{name = "Josh Kornreich"}]
requires-python = ">=3.11"
readme = "README.md"

[project.urls]
Repository = "https://github.com/joshkornreich/qwen-inference-lab"
